2004-12-20  Frank Solensky  <frank@solensky.org>

	reviewed by: Davyd Madeley <davyd@madeley.id.au>

	* weather-metar.c: (metar_tok_time), (metar_tok_wind),
	(metar_tok_vis), (metar_tok_cloud), (metar_tok_pres),
	(metar_tok_temp), (metar_tok_cond), (metar_parse):
	returns next "state" of regexp parsing for metar_parse;
	"CAVOK" sets both visibility and cloud fields (#160475)

2004-12-20  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: Fix bugs inadvertantly committed last time. XML
	  now parses.

2004-12-20  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: Locations Love-in
	  Closes bugs:
		#159899: ralph@mail.pangea.at
		#159930: floam@sh.nu (Aaron Gyes)
		#160007: bugs@mavit.freeserve.co.uk (Peter Oliver)
		#160135: robrecht.jacques@advalvas.be (Robrecht Jacques)
		#160909: victor.osadci.gnome@rt.pmc.md (Victor Osadci)
		#161590: gandalf@owca.info (Jure Cuhalev)
		#161708: nshmyrev@yandex.ru (Nickolay V. Shmyrev)

2004-12-18  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Updated Swedish airports.

2004-12-12  Frank Solensky  <frank@solensky.org>

	reviewed by: Davyd Madeley <davyd@madeley.id.au>

	* Makefile.am: add new files
	* weather.c: (requests_init), (request_done),
	(requests_done_check): remove "static" for new files
	(calc_apparent): fix bug in wind-chill calculations (#160572)
	* weather.h: add defines, entry points needed for new files
	* weather-metar.c, weather-iwin.c, weather-bom.c, weather-met.c,
	weather-wx.c (Added): break out parsing of weather conditions
	out into separate files

2004-12-11  Simos Xenitellis  <simos@gnome.org>

	* Locations.xml.in: Updated entries related to Greece.
	Assigned remote airports to near-by cities.

2004-12-09  Frank Solensky  <frank@solensky.org>

	reviewed by: Davyd Madeley <davyd@madeley.id.au>

	* weather.c: (metar_tok_time), (metar_tok_wind), (metar_tok_vis),
	(metar_tok_cloud), (metar_tok_pres), (metar_tok_temp),