@@ -1,3 +1,8 @@
+2004-12-20  Dennis Cranston <dennis_cranston@yahoo.com>
+
+	* gweather-pref.c: (gweather_pref_create):  Use HIG compliant
+	label capitalization and fix table spacing.
+
 2004-12-20  Frank Solensky  <frank@solensky.org>
 
 	reviewed by: Davyd Madeley <davyd@madeley.id.au>
